Add minikube support
We now are testing via minikube in CI. Additionally, now drupal can be
run locally via minikube.

Signed-off-by: Matt Langbehn <matthew.langbehn@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ before_script:
   - "./tests/test-shellcheck.sh"
   - "./tests/test-yamllint.sh"
 
-script: docker run hello-world
+script: "./tests/test-minikube.sh"
