--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ python: 2.7
 cache: pip
 sudo: required
 
-env:
-  - TEST_RUN="./tests/test-minikube.sh"
-  - TEST_RUN="./tests/test-kubernetes.sh"
-
 before_install:
   - sudo apt-get install shellcheck
   - pip install -U -r test-requirements.txt
-
-install:
-  - "./scripts/install.sh"
-  - "./scripts/bx_auth.sh"
+  - git clone https://github.com/IBM/pattern-ci
 
 before_script:
-  - "./tests/test-shellcheck.sh"
-  - "./tests/test-yamllint.sh"
+  - "./pattern-ci/tests/shellcheck-lint.sh"
+  - "./pattern-ci/tests/yaml-lint.sh"
 
-script: "$TEST_RUN"
+jobs:
+  include:
+    - install: ./pattern-ci/scripts/install-minikube.sh
+      script: ./tests/test-minikube.sh
+    - install:
+        - ./pattern-ci/scripts/bx-auth.sh
+        - ./pattern-ci/scripts/install-ibmcloud.sh
+      script: ./tests/test-kubernetes.sh
