--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: required
 before_install:
   - sudo apt-get install shellcheck
   - pip install -U -r test-requirements.txt
-  - git clone https://github.com/IBM/pattern-ci
+  - git clone --single-branch --depth=1 --branch update-minikube https://github.com/IBM/pattern-ci
 
 before_script:
   - "./pattern-ci/tests/shellcheck-lint.sh"
